# pf2e-npc-generator

./: Cargo.toml  README.md  index.html
frontend/: Cargo.toml  index.html
frontend/src/: main.rs  ollama.rs  styles.rs  types.rs
proxy/: Cargo.toml
proxy/src/: main.rs
src/: main.rs  ollama.rs  proxy.rs  types.rs
