[package]
name = "pf2e-npc-generator-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlInputElement", "Event"] }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
gloo-net = "0.4"
gloo-console = "0.3"
stylist = { version = "0.13", features = ["yew"] }
rand = "0.8"
wasm-bindgen-futures = "0.4" 